--- a/src/timer.html
+++ b/src/timer.html
@@ -19,7 +19,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 94, 107, 0.9);
+      background-color: #75C044;
       color: white;
       font-family: sans-serif;
       font-size: 14px;
@@ -35,10 +35,6 @@
       transition: background-color 0.4s ease, transform 0.3s ease;
     }
 
-    #draggable.starting {
-      background-color: rgba(0, 150, 0, 0.9);
-      transform: scale(1.02);
-    }
 
     #draggable.stopping {
       background-color: rgba(150, 0, 0, 0.9);
@@ -46,13 +42,11 @@
     }
 
     #clickable-area {
-      -webkit-app-region: no-drag;
       cursor: pointer;
       padding: 10px;
       border-radius: 10px;
-      background-color: rgba(0, 0, 0, 0.3);
+      background-color: #75C044;
       text-align: center;
-      border: 1px solid rgba(255, 255, 255, 0.3);
     }
 
     #time {
@@ -62,6 +56,7 @@
     }
 
     #stop-button {
+      -webkit-app-region: no-drag;
       background-color: #e0e0e0;
       border: none;
       padding: 8px 16px;
@@ -87,7 +82,7 @@
 
     @keyframes flash-red {
       0% { background-color: #ff4d4d; color: white; }
-      100% { background-color: rgba(255, 255, 255, 0.85); color: #003f4f; }
+      100% { background-color: rgba(255, 255, 255, 0.85); color: #75C044; }
     }
   </style>
 </head>
