--- a/src/timer.html
+++ b/src/timer.html
@@ -19,7 +19,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #75C044;
+      background-color: #0057B7;
       color: white;
       font-family: sans-serif;
       font-size: 14px;
@@ -45,7 +45,7 @@
       cursor: pointer;
       padding: 10px;
       border-radius: 10px;
-      background-color: #75C044;
+      background-color: #0057B7;
       text-align: center;
     }
 
@@ -82,7 +82,7 @@
 
     @keyframes flash-red {
       0% { background-color: #ff4d4d; color: white; }
-      100% { background-color: rgba(255, 255, 255, 0.85); color: #75C044; }
+      100% { background-color: rgba(255, 255, 255, 0.85); color: #0057B7; }
     }
   </style>
 </head>
